Resources/Parsers/asm/masm/MASMParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/asm/masm/MASM.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import MASMListener from './MASMListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class MASMParser extends antlr4.Parser {

    static grammarFileName = "MASM.g4";
    static literalNames = [ null, "'end'", "'segments'", "'para'", "'public'", 
                            "'ends'", "'endp'", "'['", "'+'", "']'", null, 
                            "'ds'", "'es'", "'cs'", "'ss'", "'gs'", "'fs'", 
                            "'ah'", "'al'", "'ax'", "'bh'", "'bl'", "'bx'", 
                            "'ch'", "'cl'", "'cx'", "'dh'", "'dl'", "'dx'", 
                            "'si'", "'di'", "'sp'", "'bp'", "'eax'", "'ebx'", 
                            "'ecx'", "'edx'", "'esi'", "'edi'", "'esp'", 
                            "'ebp'", "'mov'", "'cmp'", "'test'", "'push'", 
                            "'pop'", "'idiv'", "'inc'", "'dec'", "'neg'", 
                            "'mul'", "'div'", "'imul'", "'not'", "'setpo'", 
                            "'setae'", "'setnle'", "'setc'", "'setno'", 
                            "'setnb'", "'setp'", "'setnge'", "'setl'", "'setge'", 
                            "'setpe'", "'setnl'", "'setnz'", "'setne'", 
                            "'setnc'", "'setbe'", "'setnp'", "'setns'", 
                            "'seto'", "'setna'", "'setnae'", "'setz'", "'setle'", 
                            "'setnbe'", "'sets'", "'sete'", "'setb'", "'seta'", 
                            "'setg'", "'setng'", "'xchg'", "'popad'", "'aaa'", 
                            "'popa'", "'popfd'", "'cwd'", "'lahf'", "'pushad'", 
                            "'pushf'", "'aas'", "'bswap'", "'pushfd'", "'cbw'", 
                            "'cwde'", "'xlat'", "'aam'", "'aad'", "'cdq'", 
                            "'daa'", "'sahf'", "'das'", "'into'", "'iret'", 
                            "'clc'", "'stc'", "'cmc'", "'cld'", "'std'", 
                            "'cli'", "'sti'", "'movsb'", "'movsw'", "'movsd'", 
                            "'lods'", "'lodsb'", "'lodsw'", "'lodsd'", "'stos'", 
                            "'stosb'", "'stosw'", "'sotsd'", "'scas'", "'scasb'", 
                            "'scasw'", "'scasd'", "'cmps'", "'cmpsb'", "'cmpsw'", 
                            "'cmpsd'", "'insb'", "'insw'", "'insd'", "'outsb'", 
                            "'outsw'", "'outsd'", "'adc'", "'add'", "'sub'", 
                            "'cbb'", "'xor'", "'or'", "'jnbe'", "'jnz'", 
                            "'jpo'", "'jz'", "'js'", "'loopnz'", "'jge'", 
                            "'jb'", "'jnb'", "'jo'", "'jp'", "'jno'", "'jnl'", 
                            "'jnae'", "'loopz'", "'jmp'", "'jnp'", "'loop'", 
                            "'jl'", "'jcxz'", "'jae'", "'jnge'", "'ja'", 
                            "'loopne'", "'loope'", "'jg'", "'jnle'", "'je'", 
                            "'jnc'", "'jc'", "'jna'", "'jbe'", "'jle'", 
                            "'jpe'", "'jns'", "'jecxz'", "'jng'", "'movzx'", 
                            "'bsf'", "'bsr'", "'les'", "'lea'", "'lds'", 
                            "'ins'", "'outs'", "'xadd'", "'cmpxchg'", "'shl'", 
                            "'shr'", "'ror'", "'rol'", "'rcl'", "'sal'", 
                            "'rcr'", "'sar'", "'shrd'", "'shld'", "'btr'", 
                            "'bt'", "'btc'", "'call'", "'int'", "'retn'", 
                            "'ret'", "'retf'", "'in'", "'out'", "'rep'", 
                            "'repe'", "'repz'", "'repne'", "'repnz'", "'.alpha'", 
                            "'.const'", "'.cref'", "'.xcref'", "'data'", 
                            "'data?'", "'dosseg'", "'.err'", "'.err1'", 
                            "'.err2'", "'.erre'", "'.errnz'", "'.errdef'", 
                            "'.errndef'", "'.errb'", "'.errnb'", "'.erridn[i]'", 
                            "'.errdif[i]'", "'even'", "'.list'", "'width'", 
                            "'mask'", "'.seq'", "'.xlist'", "'.exit'", "'.model'", 
                            "'byte'", "'sbyte'", "'db'", "'word'", "'sword'", 
                            "'dw'", "'dword'", "'sdword'", "'dd'", "'fword'", 
                            "'df'", "'qword'", "'dq'", "'tbyte'", "'dt'", 
                            "'real4'", "'real8'", "'real'", "'far'", "'near'", 
                            "'proc'", "'?'", "'times'", null, null, null, 
                            null, null, null, "','" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, "Identifier", "DS", "ES", "CS", 
                             "SS", "GS", "FS", "AH", "AL", "AX", "BH", "BL", 
                             "BX", "CH", "CL", "CX", "DH", "DL", "DX", "SI", 
                             "DI", "SP", "BP", "EAX", "EBX", "ECX", "EDX", 
                             "ESI", "EDI", "ESP", "EBP", "MOV", "CMP", "TEST", 
                             "PUSH", "POP", "IDIV", "INC", "DEC", "NEG", 
                             "MUL", "DIV", "IMUL", "NOT", "SETPO", "SETAE", 
                             "SETNLE", "SETC", "SETNO", "SETNB", "SETP", 
                             "SETNGE", "SETL", "SETGE", "SETPE", "SETNL", 
                             "SETNZ", "SETNE", "SETNC", "SETBE", "SETNP", 
                             "SETNS", "SETO", "SETNA", "SETNAE", "SETZ", 
                             "SETLE", "SETNBE", "SETS", "SETE", "SETB", 
                             "SETA", "SETG", "SETNG", "XCHG", "POPAD", "AAA", 
                             "POPA", "POPFD", "CWD", "LAHF", "PUSHAD", "PUSHF", 
                             "AAS", "BSWAP", "PUSHFD", "CBW", "CWDE", "XLAT", 
                             "AAM", "AAD", "CDQ", "DAA", "SAHF", "DAS", 
                             "INTO", "IRET", "CLC", "STC", "CMC", "CLD", 
                             "STD", "CLI", "STI", "MOVSB", "MOVSW", "MOVSD", 
                             "LODS", "LODSB", "LODSW", "LODSD", "STOS", 
                             "STOSB", "STOSW", "SOTSD", "SCAS", "SCASB", 
                             "SCASW", "SCASD", "CMPS", "CMPSB", "CMPSW", 
                             "CMPSD", "INSB", "INSW", "INSD", "OUTSB", "OUTSW", 
                             "OUTSD", "ADC", "ADD", "SUB", "CBB", "XOR", 
                             "OR", "JNBE", "JNZ", "JPO", "JZ", "JS", "LOOPNZ", 
                             "JGE", "JB", "JNB", "JO", "JP", "JNO", "JNL", 
                             "JNAE", "LOOPZ", "JMP", "JNP", "LOOP", "JL", 
                             "JCXZ", "JAE", "JNGE", "JA", "LOOPNE", "LOOPE", 
                             "JG", "JNLE", "JE", "JNC", "JC", "JNA", "JBE", 
                             "JLE", "JPE", "JNS", "JECXZ", "JNG", "MOVZX", 
                             "BSF", "BSR", "LES", "LEA", "LDS", "INS", "OUTS", 
                             "XADD", "CMPXCHG", "SHL", "SHR", "ROR", "ROL", 
                             "RCL", "SAL", "RCR", "SAR", "SHRD", "SHLD", 
                             "BTR", "BT", "BTC", "CALL", "INT", "RETN", 
                             "RET", "RETF", "IN", "OUT", "REP", "REPE", 
                             "REPZ", "REPNE", "REPNZ", "ALPHA", "CONST", 
                             "CREF", "XCREF", "DATA", "DATA2", "DOSSEG", 
                             "ERR", "ERR1", "ERR2", "ERRE", "ERRNZ", "ERRDEF", 
                             "ERRNDEF", "ERRB", "ERRNB", "ERRIDN", "ERRDIF", 
                             "EVEN", "LIST", "WIDTH", "MASK", "SEQ", "XLIST", 
                             "EXIT", "MODEL", "BYTE", "SBYTE", "DB", "WORD", 
                             "SWORD", "DW", "DWORD", "SDWORD", "DD", "FWORD", 
                             "DF", "QWORD", "DQ", "TBYTE", "DT", "REAL4", 
                             "REAL8", "REAL", "FAR", "NEAR", "PROC", "QUESTION", 
                             "TIMES", "Hexnum", "Integer", "Octalnum", "FloatingPointLiteral", 
                             "String_", "Etiqueta", "Separator", "WS", "LINE_COMMENT" ];
    static ruleNames = [ "compilationUnit", "segments", "proc", "code", 
                         "binary_exp1", "unuary_exp1", "unuary_exp2", "binary_exp2", 
                         "notarguments", "binary_exp3", "unuary_exp3", "binary_exp4", 
                         "binary_exp5", "binary_exp6", "binary_exp7", "binary_exp8", 
                         "binary_exp9", "unuary_exp4", "unuary_exp5", "binary_exp10", 
                         "binary_exp11", "binary_exp12", "directive_exp1", 
                         "variabledeclaration", "memory", "segmentos", "register_", 
                         "o", "op", "ope", "oper", "opera", "operat", "operato", 
                         "operator_", "l", "x", "s", "sh", "b", "call", 
                         "interruption", "in_", "out", "re", "directives", 
                         "ty", "question", "time" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = MASMParser.ruleNames;
        this.literalNames = MASMParser.literalNames;
        this.symbolicNames = MASMParser.symbolicNames;
    }



	compilationUnit() {
	    let localctx = new CompilationUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, MASMParser.RULE_compilationUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10 || ((((_la - 217)) & ~0x1f) === 0 && ((1 << (_la - 217)) & 67108863) !== 0)) {
	            this.state = 100;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 10:
	                this.state = 98;
	                this.segments();
	                break;
	            case 217:
	            case 218:
	            case 219:
	            case 220:
	            case 221:
	            case 222:
	            case 223:
	            case 224:
	            case 225:
	            case 226:
	            case 227:
	            case 228:
	            case 229:
	            case 230:
	            case 231:
	            case 232:
	            case 233:
	            case 234:
	            case 235:
	            case 236:
	            case 237:
	            case 238:
	            case 239:
	            case 240:
	            case 241:
	            case 242:
	                this.state = 99;
	                this.directive_exp1();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 104;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 105;
	        this.match(MASMParser.T__0);
	        this.state = 106;
	        this.match(MASMParser.Identifier);
	        this.state = 107;
	        this.match(MASMParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	segments() {
	    let localctx = new SegmentsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, MASMParser.RULE_segments);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.match(MASMParser.Identifier);
	        this.state = 110;
	        this.match(MASMParser.T__1);
	        this.state = 111;
	        this.match(MASMParser.T__2);
	        this.state = 112;
	        this.match(MASMParser.T__3);
	        this.state = 117;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 115;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 113;
	                    this.code();
	                    break;

	                case 2:
	                    this.state = 114;
	                    this.proc();
	                    break;

	                } 
	            }
	            this.state = 119;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	        this.state = 120;
	        this.match(MASMParser.Identifier);
	        this.state = 121;
	        this.match(MASMParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	proc() {
	    let localctx = new ProcContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, MASMParser.RULE_proc);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this.match(MASMParser.Identifier);
	        this.state = 124;
	        this.match(MASMParser.PROC);
	        this.state = 128;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 125;
	                this.code(); 
	            }
	            this.state = 130;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	        this.state = 131;
	        this.match(MASMParser.RET);
	        this.state = 132;
	        this.match(MASMParser.Identifier);
	        this.state = 133;
	        this.match(MASMParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


